fixed alignment for short blog descriptions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -262,7 +262,7 @@ hr {
 .blog-description {
     word-wrap: break-word;
     text-align: center;
-    max-width: 100%;
+    width: 100%;
     padding: 0;
 }
 
